# cvml_takehome_challenge

./: .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
data/: cloud_and_poses.ply  views.json
output/: combined_mask.ply
src/: main.cpp  mask.hpp  ply_stream.hpp  view.hpp
